Add function to get pin input. Note: currently lockscreen pin doesn't work

--- a/continous/settings.json
+++ b/continous/settings.json
@@ -1,5 +1,5 @@
 {
-  "language": "english",
+  "language": 0,
   "lockScreenWallpaper": "../textures/defaultWallpaper.jpg",
   "homeScreenWallpaper": "../textures/defaultWallpaper.jpg",
   "time": "hour24",
